--- a/python/dsa/arrays_strings.ipynb
+++ b/python/dsa/arrays_strings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "-100000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "'apbqrs'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "1994"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "'fl'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "['0', '2->4', '6', '8->9']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "[0, 0, 0]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,23 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POSITION : 0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[[0, 4]]"
+       "[[1, 5]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,57 +406,65 @@
     "        length = len(intervals)\n",
     "        parsedIntervals = []\n",
     "\n",
+    "        intervals.sort()\n",
+    "\n",
     "        pos = 0\n",
     "        while pos < length:\n",
     "            num1_low = intervals[pos][0]\n",
     "            num1_high = intervals[pos][1]\n",
     "\n",
-    "            if pos + 1 < length:\n",
-    "                num2_low = intervals[pos + 1][0]\n",
-    "                num2_high = intervals[pos + 1][1]\n",
+    "            if parsedIntervals != []:\n",
+    "                num2_low = parsedIntervals[-1][0]\n",
+    "                num2_high = parsedIntervals[-1][1]\n",
+    "                if num1_low <= num2_high:\n",
+    "                    parsedIntervals[-1] = [num1_low if num1_low < num2_low else num2_low, num2_high if num1_high < num2_high else num1_high]\n",
+    "                else:\n",
+    "                    parsedIntervals.append([num1_low, num1_high])\n",
     "            else:\n",
-    "                num2_low = float('inf')\n",
-    "                num2_high = float('inf')\n",
-    "\n",
-    "            if num1_high >= num2_low:\n",
-    "                pos = pos + 2\n",
-    "                parsedIntervals.append([num1_low if num1_low < num2_low else num2_low, num2_high if num1_high < num2_high else num2_high])\n",
-    "            else:\n",
-    "                pos = pos + 1\n",
     "                parsedIntervals.append([num1_low, num1_high])\n",
+    "\n",
+    "            pos = pos + 1\n",
     "\n",
     "        return parsedIntervals\n",
     "    \n",
-    "Solution.merge(intervals = [[1,4],[0,4]])"
+    "Solution.merge(intervals = [[1,4],[4,5]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1245325868.py, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 19\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 54. Spiral Matrix ##\n",
+    "\n",
+    "class Solution:\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def spiralOrder(matrix: List[List[int]]) -> List[int]:\n",
+    "        if matrix == []:\n",
+    "            return []\n",
+    "    \n",
+    "        maxLength = len(matrix[0])\n",
+    "        maxWidth = len(matrix) - 1\n",
+    "        lengt = len(matrix[0])\n",
+    "        width = len(matrix) - 1\n",
+    "        isTraverseLength = True\n",
+    "\n",
+    "        while length != 1 and width !=  1:\n",
+    "            if isTraverseLength:\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
